--- a/app/rutas/agendamientos/index/templates/index.html
+++ b/app/rutas/agendamientos/index/templates/index.html
@@ -166,7 +166,7 @@ Inicio
         <!-- Botones de Acción -->
         <div class="row my-4">
             <div class="col-md-4">
-                <a href="/nueva-cita" class="btn btn-success btn-block">Nueva Cita</a>
+                <a href="{{ url_for('cita.citaIndex') }}" class="btn btn-success btn-block">Nueva Cita</a>
             </div>
             <div class="col-md-4">
                 <a href="/ver-citas" class="btn btn-primary btn-block">Ver Citas</a>
