--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -78,6 +78,7 @@
         data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
             <a class="collapse-item" href="#"></a> 
+            <a class="collapse-item" href="{{ url_for('cita.citaIndex') }}">Citas</a>
         </div>
 
     </div>
