--- a/app/rutas/agendamientos/index/templates/index.html
+++ b/app/rutas/agendamientos/index/templates/index.html
@@ -134,97 +134,19 @@ Inicio
 
 
 
-    <div class="container-fluid">
-        <div class="row">
-            <!-- Panel de Resumen -->
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5>Citas de Hoy</h5>
-                        <p>10 citas agendadas</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5>Pacientes Registrados</h5>
-                        <p>300 pacientes</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5>Médicos Disponibles</h5>
-                        <p>15 médicos</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    
-        <!-- Botones de Acción -->
-        <div class="row my-4">
-            <div class="col-md-4">
-                <a href="{{ url_for('cita.citaIndex') }}" class="btn btn-success btn-block">Nueva Cita</a>
-            </div>
-            <div class="col-md-4">
-                <a href="/ver-citas" class="btn btn-primary btn-block">Ver Citas</a>
-            </div>
-            <div class="col-md-4">
-                <a href="/registrar-paciente" class="btn btn-warning btn-block">Registrar Paciente</a>
-            </div>
-        </div>
-    
-        <!-- Calendario -->
-        <div class="row">
-            <div class="col-md-12">
-                <div id="calendar"></div>
-            </div>
-        </div>
-    
-        <!-- Lista de Citas Agendadas -->
-        <div class="row my-4">
-            <div class="col-md-12">
-                <h3>Citas Agendadas</h3>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Paciente</th>
-                            <th>Médico</th>
-                            <th>Fecha</th>
-                            <th>Hora</th>
-                            <th>Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Juan Pérez</td>
-                            <td>Dra. Martínez</td>
-                            <td>09/10/2024</td>
-                            <td>10:00 AM</td>
-                            <td><a href="/editar-cita/1" class="btn btn-sm btn-primary">Editar</a></td>
-                        </tr>
-                        <!-- Más citas aquí -->
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-    
-    <!-- FullCalendar.js Integration (en tu archivo JS) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#calendar').fullCalendar({
-                // Configuración del calendario
-                events: '/api/citas' // URL donde obtendrás las citas
-            });
-        });
-    </script>
 
-    <br>
- <br>
+
+
+
+    
+   
+    <body>
+        <div class="button-container">
+            <a class="large-button" href="{{ url_for('cita.citaIndex') }}">Agenda Medica</a>
+     
+            
+        </div>
+
   
   <head></head>
     <meta charset="UTF-8">
